# rknn_yolov8

./: CMakeLists.txt  README.md
utils/: image_process.cpp  rknn_pool.cpp  yolov8.cpp
